# ros_project

./: .gitignore  README.md  frames.gv
src/Player-Stage-Manual-4.1.0/: mkdocs.yml
src/Player-Stage-Manual-4.1.0/code/Ch4/: bigbob8.cfg  bigbob8.world
src/Player-Stage-Manual-4.1.0/code/Ch6.1/: Makefile
src/Player-Stage-Manual-4.1.0/code/Ch6.3/: Makefile  bigbob10.cc  bigbob11.cc  bigbob11.cfg  bigbob11.world  bigbob12.cc  bigbob13.cc  bigbob8.cc  bigbob9.cc
src/Player-Stage-Manual-4.1.0/code/Ch6.6/: Makefile  bigbob2a.cc  bigbob2b.cc  robots_and_junk.world
src/Player-Stage-Manual-4.1.0/code/Ch7.1/: sick.inc  simple.cfg  simple.world
src/Player-Stage-Manual-4.1.0/code/Ch7.3/: bigbob10.c  bigbob11.c  bigbob11.cfg  bigbob11.world  bigbob12.c  bigbob13.c  bigbob9.c
src/Player-Stage-Manual-4.1.0/code/Ch7.5/: Makefile  bigbob.cfg  bigbob.inc  robots_and_junk.world
src/Player-Stage-Manual-4.1.0/code/Ch7.6/: Makefile  bigbob2a.c  bigbob2b.c  bigbob2b.cfg
src/Player-Stage-Manual-4.1.0/code/Ch8.1/: example0.py
src/Player-Stage-Manual-4.1.0/code/Ch8.3/: bigbob10.py  bigbob11.py  bigbob12.py  bigbob13.py  bigbob7.cfg  bigbob7.world  bigbob8.py  bigbob9.py
src/Player-Stage-Manual-4.1.0/code/Ch8.5/: bigbob.py  bigbob2.cfg  bigbob2.inc  fids.py  map.inc  robots_and_fids.world
src/Player-Stage-Manual-4.1.0/code/Ch8.6/: bigbob.inc  bigbob2a.cfg  bigbob2a.py  bigbob2b.py  map.inc  robots_and_junk.world
src/Player-Stage-Manual-4.1.0/code/Ch9.1/: map.inc  pioneer.inc  simple.py
src/Player-Stage-Manual-4.1.0/code/Ch9.3/: bigbob10_c.py  bigbob11_c.py  bigbob12_c.py  bigbob13_c.py  bigbob8_c.py  bigbob9_c.py
src/Player-Stage-Manual-4.1.0/docs/: BASICS.md  CFGFILES.md  CONTROLLERS.md  CONTROLLER_C.md  CONTROLLER_CPP.md  CONTROLLER_PYC.md  CONTROLLER_PYCPP.md  INTRO.md  None.md  WORLDFILES.md  index.md
src/RP_project/: CMakeLists.txt  README  README.md  map.yaml
src/RP_project-main/: README.md
src/RP_project-main/src/project_localizer/: CMakeLists.txt
src/RP_project-main/src/project_localizer/src/: main_node.cpp
src/RP_project-main/src/project_localizer/src/rp_stuff/: CMakeLists.txt  CMakeLists_nested.txt  dmap.h  dmap_grid_localizer_test.cpp  dmap_localizer.cpp  dmap_localizer_test.cpp  draw_helpers.h  grid_main.cpp  laser_scanner.cpp  laser_scanner.h  simulator.cpp  test_grid_map.cpp  world_item.cpp  world_item.h
src/RP_project/.catkin_tools/profiles/default/: devel_collisions.txt
src/RP_project/src/project_localizer/: CMakeLists.txt  package.xml
src/RP_project/src/project_localizer/src/: main_node.cpp
src/RP_project/src/project_localizer/src/rp_files/: CMakeLists_standalone.txt  dmap.cpp  dmap_localizer.h  dmap_test.cpp  draw_helpers.cpp  grid.h  grid_map.cpp  grid_map.h  laser_scan.cpp  laser_scan.h  simulator.cpp
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/src/: listener.cpp  talker.cpp
src/dmap_localization/: CMakeLists.txt  package.xml
src/dmap_localization/config/: dmap_localization.rviz
src/dmap_localization/include/: dmap_localization.h
src/dmap_localization/include/dmap_localization/: custom_icp.h  dmap_generator.h  dmap_localizer.h  icp_aligner.h  laser_scan_processor.h
src/dmap_localization/launch/: dmap_localization.launch  frames.gv  stage_launch.launch
src/dmap_localization/maps/: create_pgm.py  simple_map.pgm  simple_map.yaml  simple_map1.yaml  your_map.yaml
src/dmap_localization/rviz/: dmap_localization.rviz
src/dmap_localization/src/: custom_icp.cpp  dmap_generator.cpp  dmap_localization.cpp  dmap_localization_node.cpp  dmap_localizer.cpp  frames.gv  laser_scan_processor.cpp
src/dmap_localization/worlds/: mymap.pgm  mymap.yaml  myworld.world
src/lidar_robot_sim/: CMakeLists.txt  package.xml
src/lidar_robot_sim/launch/: lidar_robot_sim.launch
src/lidar_robot_sim/maps/: map.yaml  simple_map.pgm
src/lidar_robot_sim/rviz/: lidar_robot_sim.rviz
src/lidar_robot_sim/src/: distance_map_generator.cpp  laserscan_to_pointcloud.cpp
src/lidar_robot_sim/urdf/: lidar_robot.urdf
src/lidar_robot_sim/worlds/: simple_world.world
src/simple_lidar_sim/: CMakeLists.txt  package.xml
src/simple_lidar_sim/launch/: start_simulation.launch
src/simple_lidar_sim/maps/: create_pgm.py  simple_map.pgm
src/simple_lidar_sim/rviz/: simple_lidar.rviz
src/simple_lidar_sim/urdf/: robot_description.urdf
